feat: successfully integrated aylien textapi call that evaluates a news article, based on user input

--- a/src/client/styles/base.scss
+++ b/src/client/styles/base.scss
@@ -2,6 +2,8 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background: linear-gradient(rgba(97,236,135,1), rgba(176,126,52,1));
+    color: white;
 }
 
 main {
