--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,31 +3,31 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Test</title>
-    <link rel="stylesheet" href="/styles/resets.css">
-    <link rel="stylesheet" href="/styles/base.css">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/form.css">
-    <link rel="stylesheet" href="/styles/footer.css">
+    <title>Sentiment Analysis</title>
+    <!-- <link rel="stylesheet" href="/styles/resets.scss">
+    <link rel="stylesheet" href="/styles/base.scss">
+    <link rel="stylesheet" href="/styles/header.scss">
+    <link rel="stylesheet" href="/styles/form.scss">
+    <link rel="stylesheet" href="/styles/footer.scss"> -->
 </head>
 
 <body>
 
     <header>
-        <div class="">
-            Logo
+        <div class="header-image">
+            <img src="https://d1sjtleuqoc1be.cloudfront.net/wp-content/uploads/2019/04/25112909/shutterstock_1073953772.jpg"
+                width="150" height="100">
         </div>
-        <div class="">
-            navigation
-        </div>
+        <h1 class="header-title">Sentiment Analysis Tool</h1>
     </header>
 
     <main>
         <section>
-            <form class="" onsubmit="return handleSubmit(event)">
-                <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
-                <input type="submit" name="" value="submit" onclick="return handleSubmit(event)"
-                    onsubmit="return handleSubmit(event)">
+            <form onsubmit="return Client.handleSubmit(event)">
+                <input id="url" type="url" name="input" value="" placeholder="Article Url" required>
+                <p id="urlValidMessage"></p>
+                <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)"
+                    onsubmit="return Client.handleSubmit(event)">
             </form>
             <section>
 
@@ -38,14 +38,14 @@
     </main>
 
     <footer>
-        <p>This is a footer</p>
+        <p>&copy; 2020 SAT</p>
     </footer>
     <script>
         // Check that service workers are supported
         if ('serviceWorker' in navigator) {
             // Use the window load event to keep the page load performant
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('/service-worker.js');
+                navigator.serviceWorker.register('/dist/service-worker.js');
             });
         }
     </script>
