feat: added jest test cases

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -26,7 +26,7 @@
             <form onsubmit="return Client.handleSubmit(event)">
                 <input id="url" type="url" name="input" value="" placeholder="Article Url" required>
                 <p id="urlValidMessage"></p>
-                <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)"
+                <input id="submit" type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)"
                     onsubmit="return Client.handleSubmit(event)">
             </form>
             <section>
